--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.4",
+    "babel-loader": "^8.1.0",
+    "commerce-components": "^0.1.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "node-sass": "^4.14.1",
+    "sass": "^1.26.9",
+    "sass-loader": "^9.0.1",
+    "style-resources-loader": "^1.3.3",
+    "tailwindcss": "^1.4.6",
+    "vue": "^2.6.11",
+    "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
